infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fatura-personalizada-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fatura-personalizada-frontend
  template:
    metadata:
      labels:
        app: fatura-personalizada-frontend
    spec:
      containers:
        - name: fatura-personalizada-frontend-container
          image: registry.digitalocean.com/oondemand/fatura-personalizada-frontend:0.0.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "2048Mi"
              cpu: "2"
