infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fatura-personalizada-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: fatura-personalizada-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
